--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.11.0",
     "log4js": "^1.0.1",
     "morgan": "~1.7.0",
+    "mysql": "^2.12.0",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.5.1"
   }
